--- a/debts-react/src/App.css
+++ b/debts-react/src/App.css
@@ -1,5 +1,11 @@
-#root{
+body{
   width: 100vw;
   height: 100vh;
   background-color: #191919;
+  max-height: 100vh;
+  max-width: 100vh;
+}
+#root{
+  width: 100%;
+  height: 100%;
 }
