--- a/debts-react/src/pages/Register/Register.module.css
+++ b/debts-react/src/pages/Register/Register.module.css
@@ -5,8 +5,8 @@
     }
 
     .body {
-        width: 90vw;
-        height: 100vh;
+        width: 90%;
+        height: 100%;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
@@ -33,7 +33,8 @@
         gap: 1em;
     }
 
-    .formItens p, a {
+    .formItens p,
+    a {
         font-family: 'Overlock';
         color: #fff;
         text-align: start;
@@ -43,20 +44,59 @@
         border: none;
     }
 
-    .formItens fieldset input {
+    .formItens fieldset > input {
+        height: 2em;
+        width: 20em;
+        border-radius: 2em;
         outline: none;
         border: none;
         padding: .5em 1em;
-        width: 20em;
-        border-radius: 1em;
         font-family: 'Roboto';
+    }
+
+    .password{
+        height: 1.5em;
+        width: 18.5em;
+        border-radius: 2em;
+        padding: .5em 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        background-color: #fff;
+    }
+    .password input{
+        height: 100%;
+        width: 80%;
+        border-radius: 2em;
+        padding: .5em 1em;
+        outline: none;
+        border: none;
+        font-family: 'Roboto';
+    }
+    .password button, .password div{
+        background-color: transparent;
+        border: none;
+        outline: none;
+        display: flex;
+        justify-content: center;
+    }
+    .password button{
+        padding-left: .2em;
+        width: 20%;
+    }
+    .password svg{
+        width: 20px;
+        height: 20px;
     }
 
     .formItens>a:hover {
         color: #efefef;
     }
 
-    .body form button{
+    .body form > button {
+        position: absolute;
+        top: 87%;
+        border: none;
         padding: 0.8em 1em;
         width: 22em;
         border-radius: 20px;
@@ -66,7 +106,8 @@
         font-weight: bold;
         transition: .3s;
     }
-    .body form button:active{
+
+    .body form button:active {
         transform: scale(1.01);
     }
 }
