--- a/debts-react/src/pages/Register/Register.module.css
+++ b/debts-react/src/pages/Register/Register.module.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 450px) {
+/* @media screen and (max-width: 450px) { */
     * {
         padding: 0;
         margin: 0;
@@ -110,4 +110,4 @@
     .body form button:active {
         transform: scale(1.01);
     }
-}
+/* } */
